--- a/client/src/components/MainPage/ImageUpload/styles.css
+++ b/client/src/components/MainPage/ImageUpload/styles.css
@@ -12,9 +12,17 @@
     display: flex;
     align-items: center;
     margin: auto;
-    width: 330px;
+    width: 355px;
     height: 50px;
     background: #eaeaea;
     border-radius: 6px;
     padding: 10px;
+}
+
+.lower-btn button{
+    padding: 5px;
+    border-radius: 5px;
+    width: 100px;
+    border: none;
+    background-color: rgb(196, 193, 193);
 }
